# prompt-gui-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  readme.md
apps/backend/: package.json  tsconfig.json
apps/backend/scripts/: build.mjs  simulate-tool-call.ts
apps/backend/src/: index.ts  logger.ts  types.ts
apps/backend/src/mcp/: prompt-form.ts  tell-human-to-do.ts  wait-for-prompt.ts
apps/backend/src/services/: runtime.ts  task-queue.ts
apps/backend/src/transport/: http.ts
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: prepare-sidecar.mjs  repair-macos-sidecar-signing.mjs  run-tauri-dev.mjs  tauri-build.mjs  tauri-dev-tools.mjs
apps/desktop/src/: App.svelte  main.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns  icon.psd
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/lib/: Markdown.svelte  api.ts  types.ts
apps/desktop/src/styles/: app.css
docs/: feature-design.md  structure.md  tech-stack.md  timeout.md  timeout.plan.md  timeout.tasks.md  workflow.md
docs/package/: mac-package.md  mac-package.tasks.md  pack-and-upload-workflow.md
docs/prompt-form/: prompt-form-backend.md  prompt-form-backend.plan.md  prompt-form-backend.tasks.md  prompt-form-design.md  prompt-form-frontend.md  prompt-form-frontend.plan.md  prompt-form-frontend.tasks.md
scripts/: simulate-with-desktop.mjs
