[package]
name = "prompt-gui-mcp-desktop"
version = "0.1.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.3", features = [] }
tokio = { version = "1", features = ["time"] }
